try fix rescue bg on mobile safsri

--- a/lands/Bacteoff/css/style.css
+++ b/lands/Bacteoff/css/style.css
@@ -1342,6 +1342,12 @@ footer a {
         margin-top: 10px;
     }
 
+    @media not all and (min-resolution: .001dpcm) {
+        .rescue {
+            background: none;
+            background-color: #fff;
+        }
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -1453,7 +1459,6 @@ footer a {
         .every2Item-text {
             opacity: 1;
         }
-
     }
 }
 
